test-cases/final-dump/backquote_hash.exp
Error detected during loading module: backquote_hash
[91mfinal-dump/backquote_hash.wybe:1:5: Syntax error: unexpected hash character (#) in backquoted symbol
expecting simple expression
[0m
